--- a/public/style.css
+++ b/public/style.css
@@ -100,6 +100,10 @@ body::-webkit-scrollbar {
    /*background-color: rgb(255, 199, 199);*/
 }
 
+.header {
+    color:rgb(230, 70, 70) 
+}
+
 /* profile picture */ 
 #profile {
     width: 150px;
