--- a/views/createItems.hbs
+++ b/views/createItems.hbs
@@ -19,7 +19,7 @@
                     <li class="nav-item ml-4 mr-4">
                         <a class="nav-link" href="/itemListing"> View Item List <span class="sr-only">(current)</span></a>
                     </li>
-                     <li class="nav-item ml-4">
+                    <li class="nav-item ml-4">
                         <a class="nav-link" href="/friends"> Friends <span class="sr-only">(current)</span></a>
                     </li>
                 </div>
@@ -44,9 +44,9 @@
             })
         </script>
             <div class="form-group">   
-                <label for="itemName">Item Name</label>
-                <input class="form-control" type="name" name="name" placeholder="Enter title"/><br>
-                <p id="item_id" name="item_id"></p>
+                <label for="itemName"><br>Item Name</label>
+                <input class="form-control" type="name" name="itemName" placeholder="Enter title"/><br>
+                <p id="no_ItemName" name="no_ItemName"></p>
              </div>
             <div class="form-group">   
                 <label for="description">Description</label>
