update on profile page ui design

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -69,12 +69,14 @@
             <div class="col-md-12" id="aboutInfo" style="display block; position:absolute; left:700px; top:50px; height:200px" onclick="editAvailable()">
             <div class="card">
                 <div class="card-user-profile">
-                    <div class="profile-page-left">
-                            <h2>About</h2> 
+                    <div class="profile-page-left debugBG">
+                            <center><h2>About</h2> 
                             <br> 
                                 <p>{{about}}
                                 </p>
-                                <button onclick="editAvailable()">Edit Profile</button>
+                            </center> 
+                                <button onclick="editAvailable()"> <a href="/editProfile">Edit Profile</a></button>
+                             
                     </div>
                 </div>
             </div>
