Friend Profile Image viewable

--- a/views/friendProfile.hbs
+++ b/views/friendProfile.hbs
@@ -29,12 +29,10 @@
             </ul>
         </div>
     </nav>
-
    <div class="content-wrapper"> 
      <div class="col-md-6 p-5">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <div id="profile">
-            <image id="profile-img" src="http://lorempixel.com/100/100" />
+            <img src="/images/profile/{{userObj.img}}"  id="profile-img"></img>
         </div>
         <input id="img-upload" type="file" 
             name="profile photo" placeholder="Photo" required="" capture>
