--- a/views/createItems.hbs
+++ b/views/createItems.hbs
@@ -55,7 +55,7 @@
                 <input type="price" class="form-control" name="itemPrice" placeholder="Enter Price">
                 <p id="no_Price" name="no_Price"></p>
             </div>            
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" id = "submit" class="btn btn-primary">Submit</button>
         </form>
         </div>
         </div>
