--- a/public/css/style.css
+++ b/public/css/style.css
@@ -96,6 +96,19 @@ body::-webkit-scrollbar {
    background-color: rgb(255, 199, 199);
 }
 
+.price-first {
+    display: inline-block;
+    vertical-align: top;
+    margin: 0;
+    font-size: 14px;
+}
+
+.price-second {
+    display: inline-block;
+    font-size: 40px;
+    color: rgb(0, 0, 0);
+}
+
 /* profile picture */ 
 #profile {
     width: 150px;
