--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -9,7 +9,7 @@
     <title>{{title}}</title>
 
     {{!-- Link Styles/CSS below --}}
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     {{!-- BootStrap + JS files necessary for navbar --}}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2" crossorigin="anonymous"></script>
