--- a/views/friendProfile.hbs
+++ b/views/friendProfile.hbs
@@ -48,13 +48,14 @@
         <div class="row">
             <div class="col-md-4 debugBG" id="aboutInfo" style="display: block" onclick="editAvailable()">
                 <h2>About</h2>
-                <p>{{about}}
+                <p>{{userObj.about}}
 
                 </p>
             </div>
+            {{!--
         <div class="col-md-4 debugBG">
             <h3>Items List</h2>
-            <p>Shows purchase history</p>
+            <p>Shows purchase history</p>--}}
         </div>
         </div>
      </div>
