--- a/views/home.hbs
+++ b/views/home.hbs
@@ -17,7 +17,7 @@
                     <li class="nav-item ml-4">
                         <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item ml-4 mr-4">
+                    <li class="nav-item ml-4">
                         <a class="nav-link" href="/itemListing">My Items<span class="sr-only">(current)</span></a>
                     </li>
                      <li class="nav-item ml-4">
@@ -81,19 +81,5 @@
                     </form>
             </div>
             {{/each}}
-        </div>
-
-        <br> 
-        <br> 
-
-        <center>
-
-            <div class=".col-md-6 .col-md-offset-3 debugBG">
-                <br>
-                <h3 class="white-text">Recommended Items</h2>
-                <p>...</p>        
-            </div>
-
-        </center>
-  
+        </div>  
 </section>
