--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,11 +1,7 @@
-{{! PLACEHOLDER }}
 <section>
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow "> 
         <a class="nav-item ml-4 mr-4" href="/logout">
             <span class="nav-link">Logout</span>
-        </a>
-        <a class="nav-item ml-4 mr-4" href="/profile">
-            <span class="nav-link">View Profile</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -20,8 +16,11 @@
                     <li class="nav-item ml-4">
                         <a class="nav-link" href="/itemListing">My Items<span class="sr-only">(current)</span></a>
                     </li>
-                     <li class="nav-item ml-4">
+                    <li class="nav-item ml-4">
                         <a class="nav-link" href="/friends">Friends<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item ml-4">
+                        <a class="nav-link" href="/createItem">Sell Item</a>
                     </li>
                     <li class="nav-item ml-4">
                         <a class="nav-link" href="/profile">Profile<span class="sr-only">(current)</span></a>
